src/ref/raylib.h

    typedef enum { false, true } bool;
typedef struct Vector2 {
    float x;
    float y;
} Vector2;
typedef struct Vector3 {
    float x;
    float y;
    float z;
} Vector3;
typedef struct Matrix {
    float m0, m4, m8, m12;
    float m1, m5, m9, m13;
    float m2, m6, m10, m14;
    float m3, m7, m11, m15;
} Matrix;
typedef struct Color {
    unsigned char r;
    unsigned char g;
    unsigned char b;
    unsigned char a;
} Color;
typedef struct Rectangle {
    float x;
    float y;
    float width;
    float height;
} Rectangle;
typedef struct Image {
    void *data;             
    int width;              
    int height;             
    int mipmaps;            
    int format;             
} Image;
typedef Texture Texture2D;
typedef Camera3D Camera;    
typedef struct Mesh {
    int vertexCount;        
    int triangleCount;      
    float *vertices;        
    float *texcoords;       
    float *texcoords2;      
    float *normals;         
    float *tangents;        
    unsigned char *colors;  
    unsigned short *indices;
    float *animVertices;    
    float *animNormals;     
    int *boneIds;           
    float *boneWeights;     
    unsigned int vaoId;     
    unsigned int *vboId;    
} Mesh;
typedef struct Shader {
    unsigned int id;        
    int *locs;              
} Shader;
typedef struct MaterialMap {
    Texture2D texture;      
    Color color;            
    float value;            
} MaterialMap;
typedef struct Material {
    Shader shader;          
    MaterialMap *maps;      
    float *params;          
} Material;
typedef struct Transform {
    Vector3 translation;    
    Quaternion rotation;    
    Vector3 scale;          
} Transform;
typedef struct BoneInfo {
    char name[32];          
    int parent;             
} BoneInfo;
typedef struct Model {
    Matrix transform;       
    int meshCount;          
    int materialCount;      
    Mesh *meshes;           
    Material *materials;    
    int *meshMaterial;      
    int boneCount;          
    BoneInfo *bones;        
    Transform *bindPose;    
} Model;
typedef struct ModelAnimation {
    int boneCount;          
    int frameCount;         
    BoneInfo *bones;        
    Transform **framePoses; 
} ModelAnimation;
typedef struct Ray {
    Vector3 position;       
    Vector3 direction;      
} Ray;
typedef struct RayHitInfo {
    bool hit;               
    float distance;         
    Vector3 position;       
    Vector3 normal;         
} RayHitInfo;
typedef struct BoundingBox {
    Vector3 min;            
    Vector3 max;            
} BoundingBox;
typedef enum {
    MAP_ALBEDO    = 0,       
    MAP_METALNESS = 1,       
    MAP_NORMAL    = 2,
    MAP_ROUGHNESS = 3,
    MAP_OCCLUSION,
    MAP_EMISSION,
    MAP_HEIGHT,
    MAP_CUBEMAP,             
    MAP_IRRADIANCE,          
    MAP_PREFILTER,           
    MAP_BRDF
} MaterialMapType;
#define MAP_DIFFUSE      MAP_ALBEDO
#define MAP_SPECULAR     MAP_METALNESS
RLAPI void DrawLine3D(Vector3 startPos, Vector3 endPos, Color color);                                    
RLAPI void DrawPoint3D(Vector3 position, Color color);                                                   
RLAPI void DrawCircle3D(Vector3 center, float radius, Vector3 rotationAxis, float rotationAngle, Color color); 
RLAPI void DrawTriangle3D(Vector3 v1, Vector3 v2, Vector3 v3, Color color);                              
RLAPI void DrawTriangleStrip3D(Vector3 *points, int pointsCount, Color color);                           
RLAPI void DrawCube(Vector3 position, float width, float height, float length, Color color);             
RLAPI void DrawCubeV(Vector3 position, Vector3 size, Color color);                                       
RLAPI void DrawCubeWires(Vector3 position, float width, float height, float length, Color color);        
RLAPI void DrawCubeWiresV(Vector3 position, Vector3 size, Color color);                                  
RLAPI void DrawCubeTexture(Texture2D texture, Vector3 position, float width, float height, float length, Color color); 
RLAPI void DrawSphere(Vector3 centerPos, float radius, Color color);                                     
RLAPI void DrawSphereEx(Vector3 centerPos, float radius, int rings, int slices, Color color);            
RLAPI void DrawSphereWires(Vector3 centerPos, float radius, int rings, int slices, Color color);         
RLAPI void DrawCylinder(Vector3 position, float radiusTop, float radiusBottom, float height, int slices, Color color); 
RLAPI void DrawCylinderWires(Vector3 position, float radiusTop, float radiusBottom, float height, int slices, Color color); 
RLAPI void DrawPlane(Vector3 centerPos, Vector2 size, Color color);                                      
RLAPI void DrawRay(Ray ray, Color color);                                                                
RLAPI void DrawGrid(int slices, float spacing);                                                          
RLAPI void DrawGizmo(Vector3 position);                                                                  
RLAPI Model LoadModel(const char *fileName);                                                            
RLAPI Model LoadModelFromMesh(Mesh mesh);                                                               
RLAPI void UnloadModel(Model model);                                                                    
RLAPI void UnloadModelKeepMeshes(Model model);                                                          
RLAPI Mesh *LoadMeshes(const char *fileName, int *meshCount);                                           
RLAPI void UnloadMesh(Mesh mesh);                                                                       
RLAPI bool ExportMesh(Mesh mesh, const char *fileName);                                                 
RLAPI Material *LoadMaterials(const char *fileName, int *materialCount);                                
RLAPI Material LoadMaterialDefault(void);                                                               
RLAPI void UnloadMaterial(Material material);                                                           
RLAPI void SetMaterialTexture(Material *material, int mapType, Texture2D texture);                      
RLAPI void SetModelMeshMaterial(Model *model, int meshId, int materialId);                              
RLAPI ModelAnimation *LoadModelAnimations(const char *fileName, int *animsCount);                       
RLAPI void UpdateModelAnimation(Model model, ModelAnimation anim, int frame);                           
RLAPI void UnloadModelAnimation(ModelAnimation anim);                                                   
RLAPI bool IsModelAnimationValid(Model model, ModelAnimation anim);                                     
RLAPI Mesh GenMeshPoly(int sides, float radius);                                                        
RLAPI Mesh GenMeshPlane(float width, float length, int resX, int resZ);                                 
RLAPI Mesh GenMeshCube(float width, float height, float length);                                        
RLAPI Mesh GenMeshSphere(float radius, int rings, int slices);                                          
RLAPI Mesh GenMeshHemiSphere(float radius, int rings, int slices);                                      
RLAPI Mesh GenMeshCylinder(float radius, float height, int slices);                                     
RLAPI Mesh GenMeshTorus(float radius, float size, int radSeg, int sides);                               
RLAPI Mesh GenMeshKnot(float radius, float size, int radSeg, int sides);                                
RLAPI Mesh GenMeshHeightmap(Image heightmap, Vector3 size);                                             
RLAPI Mesh GenMeshCubicmap(Image cubicmap, Vector3 cubeSize);                                           
RLAPI BoundingBox MeshBoundingBox(Mesh mesh);                                                           
RLAPI void MeshTangents(Mesh *mesh);                                                                    
RLAPI void MeshBinormals(Mesh *mesh);                                                                   
RLAPI void MeshNormalsSmooth(Mesh *mesh);                                                               
RLAPI void DrawModel(Model model, Vector3 position, float scale, Color tint);                           
RLAPI void DrawModelEx(Model model, Vector3 position, Vector3 rotationAxis, float rotationAngle, Vector3 scale, Color tint); 
RLAPI void DrawModelWires(Model model, Vector3 position, float scale, Color tint);                      
RLAPI void DrawModelWiresEx(Model model, Vector3 position, Vector3 rotationAxis, float rotationAngle, Vector3 scale, Color tint); 
RLAPI void DrawBoundingBox(BoundingBox box, Color color);                                               
RLAPI void DrawBillboard(Camera camera, Texture2D texture, Vector3 center, float size, Color tint);     
RLAPI void DrawBillboardRec(Camera camera, Texture2D texture, Rectangle source, Vector3 center, float size, Color tint); 
RLAPI bool CheckCollisionSpheres(Vector3 center1, float radius1, Vector3 center2, float radius2);       
RLAPI bool CheckCollisionBoxes(BoundingBox box1, BoundingBox box2);                                     
RLAPI bool CheckCollisionBoxSphere(BoundingBox box, Vector3 center, float radius);                      
RLAPI bool CheckCollisionRaySphere(Ray ray, Vector3 center, float radius);                              
RLAPI bool CheckCollisionRaySphereEx(Ray ray, Vector3 center, float radius, Vector3 *collisionPoint);   
RLAPI bool CheckCollisionRayBox(Ray ray, BoundingBox box);                                              
RLAPI RayHitInfo GetCollisionRayMesh(Ray ray, Mesh mesh, Matrix transform);                             
RLAPI RayHitInfo GetCollisionRayModel(Ray ray, Model model);                                            
RLAPI RayHitInfo GetCollisionRayTriangle(Ray ray, Vector3 p1, Vector3 p2, Vector3 p3);                  
RLAPI RayHitInfo GetCollisionRayGround(Ray ray, float groundHeight);                                    
RLAPI Shader LoadShader(const char *vsFileName, const char *fsFileName);  
RLAPI Shader LoadShaderCode(const char *vsCode, const char *fsCode);      
RLAPI void UnloadShader(Shader shader);                                   
RLAPI Shader GetShaderDefault(void);                                      
RLAPI Texture2D GetTextureDefault(void);                                  
RLAPI Texture2D GetShapesTexture(void);                                   
RLAPI Rectangle GetShapesTextureRec(void);                                
RLAPI void SetShapesTexture(Texture2D texture, Rectangle source);         
RLAPI int GetShaderLocation(Shader shader, const char *uniformName);      
RLAPI int GetShaderLocationAttrib(Shader shader, const char *attribName); 
RLAPI void SetShaderValue(Shader shader, int uniformLoc, const void *value, int uniformType);               
RLAPI void SetShaderValueV(Shader shader, int uniformLoc, const void *value, int uniformType, int count);   
RLAPI void SetShaderValueMatrix(Shader shader, int uniformLoc, Matrix mat);         
RLAPI void SetShaderValueTexture(Shader shader, int uniformLoc, Texture2D texture); 
RLAPI void SetMatrixProjection(Matrix proj);                              
RLAPI void SetMatrixModelview(Matrix view);                               
RLAPI Matrix GetMatrixModelview(void);                                    
RLAPI Matrix GetMatrixProjection(void);                                   