src/raylib/RayLib3.pas


  // Draw a line in 3D world space
  DrawLine3D: procedure(startPos: TVector3; endPos: TVector3; color: TColor); cdecl;
  // Draw a point in 3D space, actually a small line
  DrawPoint3D: procedure(position: TVector3; color: TColor); cdecl;
  // Draw a circle in 3D world space
  DrawCircle3D: procedure(center: TVector3; radius: Single; rotationAxis: TVector3; rotationAngle: Single; color: TColor); cdecl;
  // Draw a color-filled triangle (vertex in counter-clockwise order!)
  DrawTriangle3D: procedure(v1: TVector3; v2: TVector3; v3: TVector3; color: TColor); cdecl;
  // Draw a triangle strip defined by points
  DrawTriangleStrip3D: procedure(Points: PVector3; pointsCount: integer; Color: TColor); cdecl;
  // Draw cube
  DrawCube: procedure(position: TVector3; width: Single; height: Single; length: Single; color: TColor); cdecl;
  // Draw cube (Vector version)
  DrawCubeV: procedure(position: TVector3; size: TVector3; color: TColor); cdecl;
  // Draw cube wires
  DrawCubeWires: procedure(position: TVector3; width: Single; height: Single; length: Single; color: TColor); cdecl;
  // Draw cube wires (Vector version)
  DrawCubeWiresV: procedure(position: TVector3; size: TVector3; color: TColor); cdecl;
  // Draw cube textured
  DrawCubeTexture: procedure(texture: TTexture2D; position: TVector3; width: Single; height: Single; length: Single; color: TColor); cdecl;
  // Draw sphere
  DrawSphere: procedure(centerPos: TVector3; radius: Single; color: TColor); cdecl;
  // Draw sphere with extended parameters
  DrawSphereEx: procedure(centerPos: TVector3; radius: Single; rings: Integer; slices: Integer; color: TColor); cdecl;
  // Draw sphere wires
  DrawSphereWires: procedure(centerPos: TVector3; radius: Single; rings: Integer; slices: Integer; color: TColor); cdecl;
  // Draw a cylinder/cone
  DrawCylinder: procedure(position: TVector3; radiusTop: Single; radiusBottom: Single; height: Single; slices: Integer; color: TColor); cdecl;
  // Draw a cylinder/cone wires
  DrawCylinderWires: procedure(position: TVector3; radiusTop: Single; radiusBottom: Single; height: Single; slices: Integer; color: TColor); cdecl;
  // Draw a plane XZ
  DrawPlane: procedure(centerPos: TVector3; size: TVector2; color: TColor); cdecl;
  // Draw a ray line
  DrawRay: procedure(ray: TRay; color: TColor); cdecl;
  // Draw a grid (centered at (0, 0, 0))
  DrawGrid: procedure(slices: Integer; spacing: Single); cdecl;
  // Draw simple gizmo
  DrawGizmo: procedure(position: TVector3); cdecl;
//DrawTorus(), DrawTeapot() could be useful?

//------------------------------------------------------------------------------------
// Model 3d Loading and Drawing Functions (Module: models)
//------------------------------------------------------------------------------------

  { Model loading/unloading functions }

  // Load model from files (meshes and materials)
  LoadModel: function(const fileName: PUTF8Char): TModel; cdecl;
  // Load model from generated mesh (default material)
  LoadModelFromMesh: function(mesh: TMesh): TModel; cdecl;
  // Unload model from memory (RAM and/or VRAM)
  UnloadModel: procedure(model: TModel); cdecl;
  // Unload model (but not meshes) from memory (RAM and/or VRAM)
  UnloadModelKeepMeshes: procedure(model: TModel); cdecl;

  { Mesh loading/unloading functions }

  // Load meshes from model file
  LoadMeshes: function(const fileName: PUTF8Char; meshCount: PInteger): PMesh; cdecl;
  // Unload mesh from memory (RAM and/or VRAM)
  UnloadMesh: procedure(mesh: TMesh); cdecl;
  // Export mesh data to file
  ExportMesh: procedure(mesh: TMesh; const fileName: PUTF8Char); cdecl;

  { Material loading/unloading functions }

  // Load materials from model file
  LoadMaterials: function(const fileName: PUTF8Char; materialCount: PInteger): PMaterial; cdecl;
  // Load default material (Supports: DIFFUSE, SPECULAR, NORMAL maps)
  LoadMaterialDefault: function: TMaterial; cdecl;
  // Unload material from GPU memory (VRAM)
  UnloadMaterial: procedure(material: TMaterial); cdecl;
  // Set texture for a material map type (MAP_DIFFUSE, MAP_SPECULAR...)
  SetMaterialTexture: procedure(material: PMaterial; mapType: Integer; texture: TTexture2D); cdecl;
  // Set material for a mesh
  SetModelMeshMaterial: procedure(model: PModel; meshId: Integer; materialId: Integer); cdecl;

  { Model animations loading/unloading functions }

  // Load model animations from file
  LoadModelAnimations: function(const fileName: PUTF8Char; animsCount: PInteger): PModelAnimation; cdecl;
  // Update model animation pose
  UpdateModelAnimation: procedure(model: TModel; anim: TModelAnimation; frame: Integer); cdecl;
  // Unload animation data
  UnloadModelAnimation: procedure(anim: TModelAnimation); cdecl;
  // Check model animation skeleton match
  IsModelAnimationValid: function(model: TModel; anim: TModelAnimation): Boolean; cdecl;

  { Mesh generation functions }

  // Generate polygonal mesh
  GenMeshPoly: function(sides: Integer; radius: Single): TMesh; cdecl;
  // Generate plane mesh (with subdivisions)
  GenMeshPlane: function(width: Single; length: Single; resX: Integer; resZ: Integer): TMesh; cdecl;
  // Generate cuboid mesh
  GenMeshCube: function(width: Single; height: Single; length: Single): TMesh; cdecl;
  // Generate sphere mesh (standard sphere)
  GenMeshSphere: function(radius: Single; rings: Integer; slices: Integer): TMesh; cdecl;
  // Generate half-sphere mesh (no bottom cap)
  GenMeshHemiSphere: function(radius: Single; rings: Integer; slices: Integer): TMesh; cdecl;
  // Generate cylinder mesh
  GenMeshCylinder: function(radius: Single; height: Single; slices: Integer): TMesh; cdecl;
  // Generate torus mesh
  GenMeshTorus: function(radius: Single; size: Single; radSeg: Integer; sides: Integer): TMesh; cdecl;
  // Generate trefoil knot mesh
  GenMeshKnot: function(radius: Single; size: Single; radSeg: Integer; sides: Integer): TMesh; cdecl;
  // Generate heightmap mesh from image data
  GenMeshHeightmap: function(heightmap: TImage; size: TVector3): TMesh; cdecl;
  // Generate cubes-based map mesh from image data
  GenMeshCubicmap: function(cubicmap: TImage; cubeSize: TVector3): TMesh; cdecl;

  { Mesh manipulation functions }

  // Compute mesh bounding box limits
  MeshBoundingBox: function(mesh: TMesh): TBoundingBox; cdecl;
  // Compute mesh tangents
  MeshTangents: procedure(mesh: PMesh); cdecl;
  // Compute mesh binormals
  MeshBinormals: procedure(mesh: PMesh); cdecl;
  // Smooth (average) vertex normals
  MeshNormalsSmooth: procedure(mesh: PMesh); cdecl;

  { Model drawing functions }

  // Draw a model (with texture if set)
  DrawModel: procedure(model: TModel; position: TVector3; scale: Single; tint: TColor); cdecl;
  // Draw a model with extended parameters
  DrawModelEx: procedure(model: TModel; position: TVector3; rotationAxis: TVector3; rotationAngle: Single; scale: TVector3; tint: TColor); cdecl;
  // Draw a model wires (with texture if set)
  DrawModelWires: procedure(model: TModel; position: TVector3; scale: Single; tint: TColor); cdecl;
  // Draw a model wires (with texture if set) with extended parameters
  DrawModelWiresEx: procedure(model: TModel; position: TVector3; rotationAxis: TVector3; rotationAngle: Single; scale: TVector3; tint: TColor); cdecl;
  // Draw bounding box (wires)
  DrawBoundingBox: procedure(box: TBoundingBox; color: TColor); cdecl;
  // Draw a billboard texture
  DrawBillboard: procedure(camera: TCamera; texture: TTexture2D; center: TVector3; size: Single; tint: TColor); cdecl;
  // Draw a billboard texture defined by sourceRec
  DrawBillboardRec: procedure(camera: TCamera; texture: TTexture2D; source: TRectangle; center: TVector3; size: Single; tint: TColor); cdecl;

  { Collision detection functions }

  // Detect collision between two spheres
  CheckCollisionSpheres: function(centerA: TVector3; radiusA: Single; centerB: TVector3; radiusB: Single): Boolean; cdecl;
  // Detect collision between two bounding boxes
  CheckCollisionBoxes: function(box1: TBoundingBox; box2: TBoundingBox): Boolean; cdecl;
  // Detect collision between box and sphere
  CheckCollisionBoxSphere: function(box: TBoundingBox; center: TVector3; radius: Single): Boolean; cdecl;
  // Detect collision between ray and sphere
  CheckCollisionRaySphere: function(ray: TRay; center: TVector3; radius: Single): Boolean; cdecl;
  // Detect collision between ray and sphere, returns collision point
  CheckCollisionRaySphereEx: function(ray: TRay; center: TVector3; radius: Single; collisionPoint: PVector3): Boolean; cdecl;
  // Detect collision between ray and box
  CheckCollisionRayBox: function(ray: TRay; box: TBoundingBox): Boolean; cdecl;
  // Get collision info between ray and mesh
  GetCollisionRayMesh: function(ray: TRay; mesh: TMesh; transform: TMatrix): TRayHitInfo; cdecl;
  // Get collision info between ray and model
  GetCollisionRayModel: function(ray: TRay; model: TModel): TRayHitInfo; cdecl;
  // Get collision info between ray and triangle
  GetCollisionRayTriangle: function(ray: TRay; p1: TVector3; p2: TVector3; p3: TVector3): TRayHitInfo; cdecl;
  // Get collision info between ray and ground plane (Y-normal plane)
  GetCollisionRayGround: function(ray: TRay; groundHeight: Single): TRayHitInfo; cdecl;

//------------------------------------------------------------------------------------
// Shaders System Functions (Module: rlgl)
// NOTE: This functions are useless when using OpenGL 1.1
//------------------------------------------------------------------------------------

  { Shader loading/unloading functions }

  // Load shader from files and bind default locations
  LoadShader: function(const vsFileName: PUTF8Char; const fsFileName: PUTF8Char): TShader; cdecl;
  // Load shader from code strings and bind default locations
  LoadShaderCode: function(const vsCode: PUTF8Char; const fsCode: PUTF8Char): TShader; cdecl;
  // Unload shader from GPU memory (VRAM)
  UnloadShader: procedure(shader: TShader); cdecl;

  // Get default shader
  GetShaderDefault: function: TShader; cdecl;
  // Get default texture
  GetTextureDefault: function: TTexture2D; cdecl;
  // Get texture to draw shapes
  GetShapesTexture: function: TTexture2D; cdecl;
  // Get texture rectangle to draw shapes
  GetShapesTextureRec: function: TRectangle; cdecl;
  // Define default texture used to draw shapes
  SetShapesTexture: procedure(texture: TTexture2D; source: TRectangle); cdecl;

  { Shader configuration functions }

  // Get shader uniform location
  GetShaderLocation: function(shader: TShader; const uniformName: PUTF8Char): Integer; cdecl;
  GetShaderLocationAttrib: function(shader: TShader; const attribName: PUTF8Char): Integer; cdecl;
  // Set shader uniform value
  SetShaderValue: procedure(shader: TShader; uniformLoc: Integer; const value: Pointer; uniformType: Integer); cdecl;
  // Set shader uniform value vector
  SetShaderValueV: procedure(shader: TShader; uniformLoc: Integer; const value: Pointer; uniformType: Integer; count: Integer); cdecl;
  // Set shader uniform value (matrix 4x4)
  SetShaderValueMatrix: procedure(shader: TShader; uniformLoc: Integer; mat: TMatrix); cdecl;
  // Set shader uniform value for texture
  SetShaderValueTexture: procedure(shader: TShader; uniformLoc: Integer; texture: TTexture2D); cdecl;
  // Set a custom projection matrix (replaces internal projection matrix)
  SetMatrixProjection: procedure(proj: TMatrix); cdecl;
  // Set a custom modelview matrix (replaces internal modelview matrix)
  SetMatrixModelview: procedure(view: TMatrix); cdecl;
  // Get internal modelview matrix
  GetMatrixModelview: function: TMatrix; cdecl;
  // Get internal projection matrix
  GetMatrixProjection: function: TMatrix; cdecl;
